Add changes to dtManage page